--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	compile 'org.jsoup:jsoup:1.7.1'
 	compile 'com.fasterxml.jackson.core:jackson-core:2.1.1'
 	compile 'commons-cli:commons-cli:1.2'
+	compile 'org.apache.commons:commons-lang3:3.1'
 	
     testCompile 'junit:junit:4.+'
     testCompile 'org.mockito:mockito-core:1.8.0'
