--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
 	compile 'com.fasterxml.jackson.core:jackson-core:2.1.1'
 	compile 'commons-cli:commons-cli:1.2'
 	compile 'org.apache.commons:commons-lang3:3.1'
-	
+	compile 'com.google.code.findbugs:jsr305:2.0.1'
     testCompile 'junit:junit:4.+'
     testCompile 'org.mockito:mockito-core:1.8.0'
 }
